fix overflow regression
#flucoding

--- a/source/stylesheets/_objects.layout.sass
+++ b/source/stylesheets/_objects.layout.sass
@@ -11,7 +11,7 @@
   +clearfix
   margin-left: -15px
   margin-right: -15px
-  overflow-x: hidden
+  overflow: hidden
 
 .Content
   +container
